# StackWalkAsAService

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  generate_deps_dockerfile.rb  setup.rb  stack_walk_dependencies.rb
.circleci/: config.yml
config/: wt_config.xml
src/: APIV1.cpp  APIV1.h  Application.cpp  Application.h  CMakeLists.txt  ResultWidget.cpp  ResultWidget.h  StackWalkOperation.cpp  StackWalkOperation.h  StackWalkRunner.cpp  StackWalkRunner.h  main.cpp
